--- a/app.css
+++ b/app.css
@@ -1,10 +1,10 @@
 body {
-  max-width: 1000px;
   margin: 0 auto;
   color: black;
   background-image: linear-gradient(to left, #d8c49b, #36edfa);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-width: 1000px;
 }
 
 /* Layout */
@@ -17,6 +17,8 @@ footer {
 span,
 h1 {
   text-align: center;
+  color: #000;
+  text-shadow: 2px 1px 1px rgba(255, 255, 255, 0.4);
 }
 strong {
   font-size: 1.5rem;
@@ -48,13 +50,23 @@ a {
 
 a:hover,
 a:focus {
-  color: #2200ff;
+  color: #5b43fc;
   cursor: pointer;
 }
 
-.right-td {
-  position: absolute;
-  right: 400px;
+strong:hover {
+  color: #8f1df4;
+  text-decoration: underline;
+}
+
+.pyBody {
+  position: relative;
+  left: 182%;
+}
+
+.pyBodys {
+  position: relative;
+  left: 100%;
 }
 
 .title-div {
@@ -67,6 +79,10 @@ a:focus {
   display: flex;
   justify-content: center;
   margin-right: 10rem;
+}
+
+.lower-ul {
+  margin-bottom: 2rem;
 }
 
 img {
